# TinyMOA

./: .gitignore  README.md  main.py  pyproject.toml
docs/: Architecture.md  ISA.md  README.md
fpga/: AlchitryCuV2.pcf
macro/: README.md  SG13G2_512x32_SP.gds
src/: alu.v  core.v  core_generic.v  counter.v  cpu.v  csr.v  decoder.v  registers.v  tinymoa.v
src/alu/: alu.v  multiplier.v  shifter.v
src/cim/: cell.v  core.v  corelet.v
src/cpu/: alu.v  decode.v  decoder.v  registers.v
src/dcim/: dcim.v
src/fpga/: iCE40-HX8K.pcf
test/: .gitignore  README.md  pyproject.toml  rv32c_encode.py  rv32i_encode.py  test.py  testbench.v
test/cim/: README.md  test_2_write_settle.py  test_3_charge_injection.py  test_4_msb_sweep.py  test_5_write_profiling.py
test/cim/simulations/: test_2_write_settle.csv  test_3_charge_injection.csv  test_4_retention_sweep.csv
test/integration/core/: README.md  tb_core.v  test_core.py
test/integration/core_generic/: README.md  tb_core_generic.v  test_core_generic.py
test/integration/cpu/: tb_core.v  test_core.py
test/integration/dcim/: tb_dcim.v  test_dcim.py
test/integration/placeholder/: tb_placeholder.v  test_placeholder.py
test/integration/system/: test_system.py
test/unit/alu/: tb_multiplier.v  tb_shifter.v  test_alu.py  test_multiplier.py  test_shifter.py
test/unit/bootloader/: tb_bootloader.v
test/unit/counter/: tb_counter.v  test_counter.py
test/unit/cpu/: tb_cpu.v  test_cpu.py
test/unit/csr/: tb_csr.v  test_csr.py
test/unit/dcim/: tb_dcim.v  (+1 more)
test/utility/: rv32c_encode.py
tinydcim/cpu/: flash.v  ram.v
(+15 files in other folders)
