[project]
name = "TinyMOA"
version = "0.1.0"
description = "Nibble-serial RV32EC CPU with compute-in-memory (CIM) accelerator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cocotb>=2.0.1",
    "cocotb-test>=0.2.6",
    "klayout>=0.30.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
